# BuildYourOwnLisp

./: README.md
clisp/: .gitignore  clisp  justfile  main.c  meson.build
clisp/lib/: hello.lspy  std.lspy
clisp/libclisp/: libclisp.c  libclisp.h  meson.build
clisp/libmpc/: meson.build
